Created Account, set up the modal for login on the homepage and added success messages

--- a/nr1/static/css/main.css
+++ b/nr1/static/css/main.css
@@ -84,6 +84,16 @@ input{
     text-decoration: none;
     cursor: pointer;
 }
+
+.message-container p{
+    text-align: center;
+}
+.error-message{
+    color: red;
+}
+.success-message{
+    color: green;
+}
 .main-header{
     padding: 50px 0;
 }
