changed color of error-message paragraph on main css

--- a/nr1/static/css/main.css
+++ b/nr1/static/css/main.css
@@ -89,7 +89,7 @@ input{
     text-align: center;
 }
 .error-message{
-    color: red;
+    color: rgb(58, 71, 10);
 }
 .success-message{
     color: green;
