--- a/nr1/static/css/main.css
+++ b/nr1/static/css/main.css
@@ -14,70 +14,85 @@ a{
 p{
     padding: 8px 0;
 }
-
-.auth-nav form{
-    margin: auto;
-    width: 90%;
-    border: 1px solid white;
-}
-input{
-    display: block;
-    width: 80%;
-    left: 20%;width: 100%;
+#modalButton{
     border: none;
     outline: none;
-    margin-top: 16px;
-    padding: 8px 0;
+    box-sizing: border-box;
+    background: none;
+    color: steelblue;
+    padding: 5px;
+    font-size: 1rem;
+    cursor: pointer;
+}
+#modalButton:hover{
+    background: steelblue;
+    color: white;
+}
+
+.auth-nav .auth-forms form{
+    margin: 10px auto;
+    width: 100%;
+    border: 1px solid white;
+    padding: 3px;
+    box-sizing: border-box;
+}
+.auth-nav .auth-forms input, .auth-nav .auth-forms label{
+    display: block;
+    width: 95%;
+    width: 100%;
+    border: none;
+    outline: none;
+    margin-top: 2px;
+    padding: 3px ;
+    font-size: .9rem;
 }
 .auth-nav{
     display: flex;
     justify-content: right;
     margin: 10px auto;
     background: lightgray;
-    padding: 0 8px;
     font-family: Arial;
 }
-.auth-nav button{
-    display: block;
-    text-align: right;
-    padding: 5px 0 5px 16px;
+.auth-nav #login-modal form input[type='submit']{
     outline: none;
     border: none;
-    background: none;
+    background: lightgray;
     cursor: pointer;
-    color: steelblue;
     font-size: 1rem;
 }
-.auth-nav button:hover{
-    background: steelblue;
-    color: white;
-}
+
 .modal{
     display: none;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     position: fixed;
     z-index: 1;
-    padding: 10% 2%;
+    padding: 2% 1%;
     left: 0;
     top: 0;
     width: 100%;
-    height: 60%;
+    height: 50%;
     overflow: auto;
     background: gray;
-    box-shadow: 2px 2px 4px gray;
+}
+.auth-forms{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-column-gap: 10px
 }
 #login-modal{
+    display: relative;
     background:steelblue;
-    margin: auto;
-    border: 1px solid blue;
-    width: 100%;
     color: white;
 }
+.form-title{
+    color: rgb(44, 66, 3);
+}
 .close{
-    color: #aaa;
+    display: absolute;
+    color: white;
     float: right;
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 36px;
+    top: 0;
+    right: -10;
 }
 .close:hover, close:focus{
     color: black;
@@ -100,9 +115,16 @@ input{
 .masthead{
     color: steelblue;
     font-size: 3rem;
+    text-align: center;
 }
 .main-nav{
+    border-top: 1px solid steelblue;
     display: flex;
+    justify-content: center;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    background: lightgray;
 }
 .main-nav a{
     padding: 5px 16px;
@@ -112,36 +134,37 @@ input{
     background: steelblue;
     color: white;
 }
-        .dropdown{
-            position: relative;
-        }
-        .dropdown button{
-            background: none;
-            outline: none;
-            border: none;
-            cursor: pointer;
-            color: steelblue;
-            font-size: 1rem;
-        }
-        .dropdown button:hover{
-            background: steelblue;
-            color: white;
-        }
-        .dropdown-content{
-            display: none;
-            position: absolute;
-        }
-        .dropdown:hover .dropdown-content{
-            display: block;
-            z-index: 1;
-            background: lightgray;
-            color: white;
-            width: 100%;
-        }
-        .dropdown-content a{
-            display: block;
-            width: 100%;
-        }
+.dropdown{
+    position: relative;
+}
+.dropdown button{
+    background: none;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    color: steelblue;
+    font-size: .9rem;
+    padding: 5px 16px;
+}
+.dropdown button:hover{
+    background: steelblue;
+    color: white;
+}
+.dropdown-content{
+    display: none;
+    position: absolute;
+}
+.dropdown:hover .dropdown-content{
+    display: block;
+    z-index: 1;
+    background: lightgray;
+    color: white;
+    width: 100%;
+}
+.dropdown-content a{
+    display: block;
+    width: 100%;
+}
 
 
 .container{
@@ -195,6 +218,9 @@ input{
 .section-title{
     padding: 10px 0;
 }
+.footer-nav{
+    margin: 10px auto;
+}
 @media only screen and (min-width:450px){
     .container{
         grid-template-columns: 150px 1fr;
@@ -224,7 +250,11 @@ input{
     }
     .footer-navs{
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        grid-gap: 10px;
+    }
+    .footer-nav{
+        margin: 10px auto;
     }
    
 }
