fixed sidebar menu styles

--- a/nr1/static/css/main.css
+++ b/nr1/static/css/main.css
@@ -157,7 +157,7 @@ p{
     border: none;
     cursor: pointer;
     color: steelblue;
-    font-size: .9rem;
+    font-size: 1rem;
     padding: 5px 16px;
     min-width: 120px;
 }
