--- a/nr1/static/css/main.css
+++ b/nr1/static/css/main.css
@@ -246,8 +246,10 @@ p{
 .content-image{
     display: block;
     width: 100%;
-    max-width: 700px;
-    padding: 10px;
+    max-width: 400px;
+    max-height: 500;
+    object-fit: cover;
+    padding: 10px 0;;
 }
 .footer-navs{
     border-top: 1px solid gray;
