--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                         Topics: 
                     {% for topic in post.topics.all %}
                     <a href="{{topic.get_absolute_url}}">
-                        {{topic.name}} </a> 
+                        {{topic.name}} </a> | 
                     {% endfor %}
                     </div>
                     
