--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -19,7 +19,7 @@
                 Topics: 
             {% for topic in post.topics.all %}
             <a href="{{topic.get_absolute_url}}">
-                {{topic.name}} </a> 
+                {{topic.name}} </a> |
             {% endfor %}
             </div>
     </div>
