--- a/templates/posts/post_detail.html
+++ b/templates/posts/post_detail.html
@@ -6,7 +6,7 @@
 {% if post %}
 <section class="post-detail">
     <h6 class="category">{{post.category}}</h6>
-    <h4 class="title">{{post.title}}</h4>
+    <h3 class="post-title">{{post.title}}</h3>
     <h4 class="author">{{post.author}}</h4>
     <div class="content">
         {% if post.thumbnail %}
