--- a/templates/posts/author_posts.html
+++ b/templates/posts/author_posts.html
@@ -11,7 +11,7 @@
     <img src="{{post.thumbnail.url}}" alt="{{post.title}}" title="{{post.title}}" class="thumbnail">
 </div>
 {% endif %}
-<h4 class="title">{{post.title}}</h4>
+<h4 class="post-title">{{post.title}}</h4>
 <h5 class="author">{{post.author}}</h5>
 <p class="content">{{post.content|safe|linebreaks|truncatewords:30}}
     <a href="{{post.get_absolute_url}}" class="read-more-link">Read More</a>
