added semantic text for close button on login/register modal

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         {% else %}
             <button id="modalButton">Login / Register</button>
             <div id="login-modal" class="modal">
-                <span class="close">&times;</span>
+                <span class="close">&times; close this page </span>
             <section class="auth-forms">
                 <div class="login-form">
                     <h3 class="form-title">Please Login</h3>
