--- a/nr1/static/css/main.css
+++ b/nr1/static/css/main.css
@@ -34,10 +34,11 @@ p{
     color: white;
 }
 
-.auth-nav .auth-forms form{
+.auth-nav .auth-forms form, .privacy{
     margin: 10px auto;
     width: 100%;
     padding:10px;
+    max-width: 650px;
     box-sizing: border-box;
     background: gray;
     box-shadow: 2px 2px 4px black;
@@ -125,12 +126,7 @@ p{
     text-align: center;
 }
 .close{
-    display: absolute;
-    color: white;
-    float: right;
-    font-size: 36px;
-    top: 0;
-    right: -10;
+    font-size: 20px;
 }
 .close:hover, close:focus{
     color: black;
