--- a/templates/base.html
+++ b/templates/base.html
@@ -22,11 +22,18 @@
         {% else %}
             <button id="modalButton">Login / Register</button>
             <div id="login-modal" class="modal">
-                <span class="close">&times; close this page </span>
+            <section class="auth-tabs">
+                
+                <button id="login-tab">Login</button>
+                <button id="register-tab">Register</button>
+                <button id="privacy-tab">Privacy</button>
+                <button class="close">&times; close this page </button>
+            </section>
             <section class="auth-forms">
                 <div class="login-form">
-                    <h3 class="form-title">Please Login</h3>
+                   
                     <form action="{% url 'login' %}" class="login-form" method="POST">
+                        <h3 class="form-title">Please Login</h3>
                         {% csrf_token %}
                         <label for="login-username">Username</label>
                         <input type="text" id="login-username" name="username" placeholder="username" required>
@@ -36,8 +43,9 @@
                     </form>
                 </div>
                 <div class="register-form">
-                    <h3 class="form-title">Register Your Account</h3>
+                    
                     <form action="{% url 'register' %}" class="login-form" method="POST">
+                        <h3 class="form-title">Register Your Account</h3>
                         {% csrf_token %}
                         <label for="first_name">First Name</label>
                         <input type="text" id="first_name" name="first_name" placeholder="first name" required>
@@ -55,14 +63,49 @@
                     </form>
                 </div>
                 <div class="privacy">
+                    
                     <h3 class="form-title">Our Privacy Statement</h3>
-                    <section class="privacy-content">
+                    
                         <p>If you are not registered, please register first and then login.</p> 
                         <p>Your login and registration data is encrypted and secure. We take your personal privacy very seriously and will not sell any of your data to any third parties. We might use some of your data, such as email and name, to communicate only with you. Thank you always for using this site. </p>
-                    </section>
                 </div>
             </section>
             </div>
+            <script>
+                
+                var loginForm = document.querySelector('.login-form');
+                var registerForm = document.querySelector('.register-form')
+                var privacy = document.querySelector('.privacy')
+                var loginTab = document.querySelector('#login-tab')
+                var registerTab = document.querySelector('#register-tab')
+                var privacyTab = document.querySelector('#privacy-tab')
+                //initial condition of the modal
+                function hideForms(){
+                    registerForm.style.display = 'none';
+                    privacy.style.display = 'none';
+                }
+                hideForms();
+                loginTab.addEventListener('click', ()=>{
+                    loginForm.style.display = 'block';
+                    registerForm.style.display = 'none';
+                    privacy.style.display = 'none';
+                })
+                registerTab.addEventListener('click', ()=>{
+                    loginForm.style.display = 'none';
+                    privacy.style.display = 'none';
+                    registerForm.style.display = 'block';
+                })
+                privacyTab.addEventListener('click', ()=>{
+                    privacy.style.display = 'block';
+                    loginForm.style.display = 'none';
+                    registerForm.style.display = 'none';
+                })
+            </script>
+            <style>
+                .auth-tabs{
+                    text-align: center;
+                }
+            </style>
             {% endif %}
     </nav>
     {% if messages %}
