--- a/nr1/static/css/main.css
+++ b/nr1/static/css/main.css
@@ -36,12 +36,11 @@ p{
 
 .auth-nav .auth-forms form, .privacy{
     margin: 0px auto;
-    padding: 10px 0;
+    padding: 10px 30px;
     width: 100%;
-    padding:10px;
-    max-width: 650px;
+    max-width: 600px;
     box-sizing: border-box;
-    background: gray;
+    background:darkolivegreen;
     box-shadow: 2px 2px 4px black;
     border-radius: 8px;
 }
@@ -74,15 +73,17 @@ p{
     box-sizing: border-box;
     margin:0;
     outline: 0;
-    padding: 5px 8px;
-    width: 120px;
+    padding: 5px;
+    width: 70px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     background: lightgray;
+    font-size: 1rem;
 }
 .active{
-    background: green;
+    background: darkolivegreen;
     color: white;
+    box-shadow: 2px 0 1px black;
 }
 #logout-form input:hover, .auth-nav a:hover{
     background: steelblue;
@@ -143,9 +144,11 @@ p{
     background: white;
     color: rgb(44, 66, 3);
     text-align: center;
+    padding: 5px 0;
 }
 .close{
-    font-size: 20px;
+    font-size: .9rem;
+    padding: 5px;
 }
 .close:hover, close:focus{
     color: black;
